NXP-27059: Fix JavaDoc warnings/errors